# robobo_ros2

./: .gitignore  README.md  config.yaml
robobo_ros2/: package.xml  requirements.txt  setup.cfg  setup.py
robobo_ros2/config/: robobo.yaml  sample.yaml
robobo_ros2/launch/: robobo.launch.py
robobo_ros2/robobo_ros2/: robobo_base_node.py  robobo_container.py
robobo_ros2/robobo_ros2/base/: robobo_base_node.py
robobo_ros2/robobo_ros2/smartphone/: battery_node.py  emotion_node.py  imu_node.py  light_node.py
robobo_ros2/robobo_ros2/smartphone/audio/: audio_node.py  speech_node.py
robobo_ros2/robobo_ros2/smartphone/orientation/: orientation_node.py
robobo_ros2/robobo_ros2/smartphone/vision/: aruco_node.py  blob_node.py  camera_node.py  qr_node.py
robobo_ros2_interfaces/: CMakeLists.txt  package.xml
robobo_ros2_interfaces/action/: MoveTilt.action  MoveWheelsDegrees.action  MoveWheelsTime.action
robobo_ros2_interfaces/msg/: ArucoArray.msg  ArucoTag.msg  Blob.msg  QR.msg
robobo_ros2_interfaces/srv/: MovePan.srv  MoveTilt.srv  MoveWheels.srv  MoveWheelsDegrees.srv  MoveWheelsTime.srv  PlayNote.srv  PlaySound.srv  SayText.srv  SetActiveColorBlobs.srv  SetLed.srv
